--- a/Anime-Score.css
+++ b/Anime-Score.css
@@ -423,6 +423,13 @@ MatchTemplate=/[TYPE]/[ID]/
 /* Metal Fight Beyblade 4D */ .list-table td.data.image > a[href^="/anime/10370/"]::after { content: "6.89"; }
 /* Metal Fight Beyblade Zero G */ .list-table td.data.image > a[href^="/anime/13231/"]::after { content: "6.01"; }
 /* Metal Fight Beyblade: Baku */ .list-table td.data.image > a[href^="/anime/8410/"]::after { content: "6.86"; }
+/* Mirai Nikki (TV) */ .list-table td.data.image > a[href^="/anime/10620/"]::after { content: "7.48"; }
+/* Mob Psycho 100 */ .list-table td.data.image > a[href^="/anime/32182/"]::after { content: "8.48"; }
+/* Mob Psycho 100 II */ .list-table td.data.image > a[href^="/anime/37510/"]::after { content: "8.82"; }
+/* Mondaiji-tachi ga Isekai kara Kuru Sou Desu yo? */ .list-table td.data.image > a[href^="/anime/15315/"]::after { content: "7.51"; }
+/* Monogatari Series: Second Season */ .list-table td.data.image > a[href^="/anime/17074/"]::after { content: "8.78"; }
+/* Mononoke Hime */ .list-table td.data.image > a[href^="/anime/164/"]::after { content: "8.69"; }
+/* Monster */ .list-table td.data.image > a[href^="/anime/19/"]::after { content: "8.80"; }
 /* Mujin Wakusei Survive */ .list-table td.data.image > a[href^="/anime/709/"]::after { content: "7.71"; }
 /* Munou na Nana */ .list-table td.data.image > a[href^="/anime/41619/"]::after { content: "7.23"; }
 /* Mushishi */ .list-table td.data.image > a[href^="/anime/457/"]::after { content: "8.68"; }
@@ -439,15 +446,8 @@ MatchTemplate=/[TYPE]/[ID]/
 /* Nanatsu no Taizai: Seisen no Shirushi */ .list-table td.data.image > a[href^="/anime/31722/"]::after { content: "7.03"; }
 /* Nanbaka */ .list-table td.data.image > a[href^="/anime/30016/"]::after { content: "7.34"; }
 /* Nanbaka 2 */ .list-table td.data.image > a[href^="/anime/34414/"]::after { content: "7.50"; }
-/* Naruto */ .list-table td.data.image > a[href^="/anime/20/"]::after { content: "7.95"; }
-/* Mirai Nikki (TV) */ .list-table td.data.image > a[href^="/anime/10620/"]::after { content: "7.48"; }
-/* Mob Psycho 100 */ .list-table td.data.image > a[href^="/anime/32182/"]::after { content: "8.48"; }
-/* Mob Psycho 100 II */ .list-table td.data.image > a[href^="/anime/37510/"]::after { content: "8.82"; }
-/* Mondaiji-tachi ga Isekai kara Kuru Sou Desu yo? */ .list-table td.data.image > a[href^="/anime/15315/"]::after { content: "7.51"; }
-/* Monogatari Series: Second Season */ .list-table td.data.image > a[href^="/anime/17074/"]::after { content: "8.78"; }
-/* Mononoke Hime */ .list-table td.data.image > a[href^="/anime/164/"]::after { content: "8.69"; }
-/* Monster */ .list-table td.data.image > a[href^="/anime/19/"]::after { content: "8.80"; }
 /* Nanbaka: Shusseki Bangou no Tsuita Baka-tachi! */ .list-table td.data.image > a[href^="/anime/34533/"]::after { content: "6.89"; }
+/* Naruto */ .list-table td.data.image > a[href^="/anime/20/"]::after { content: "7.95"; }
 /* Naruto: Shippuuden */ .list-table td.data.image > a[href^="/anime/1735/"]::after { content: "8.21"; }
 /* Natsume Yuujinchou */ .list-table td.data.image > a[href^="/anime/4081/"]::after { content: "8.32"; }
 /* Natsume Yuujinchou Go */ .list-table td.data.image > a[href^="/anime/32983/"]::after { content: "8.58"; }
@@ -653,3 +653,100 @@ MatchTemplate=/[TYPE]/[ID]/
 /* Uchiage Hanabi, Shita kara Miru ka? Yoko kara Miru ka? */ .list-table td.data.image > a[href^="/anime/34498/"]::after { content: "6.09"; }
 /* Uchuu Kyoudai */ .list-table td.data.image > a[href^="/anime/12431/"]::after { content: "8.51"; }
 /* Umineko no Naku Koro ni */ .list-table td.data.image > a[href^="/anime/4896/"]::after { content: "7.09"; }
+/* Usagi Drop */ .list-table td.data.image > a[href^="/anime/10162/"]::after { content: "8.40"; }
+/* Uzaki-chan wa Asobitai! */ .list-table td.data.image > a[href^="/anime/41226/"]::after { content: "7.01"; }
+/* Vanitas no Karte */ .list-table td.data.image > a[href^="/anime/48580/"]::after { content: "7.92"; }
+/* Vinland Saga */ .list-table td.data.image > a[href^="/anime/37521/"]::after { content: "8.73"; }
+/* Violet Evergarden */ .list-table td.data.image > a[href^="/anime/33352/"]::after { content: "8.66"; }
+/* Violet Evergarden Movie */ .list-table td.data.image > a[href^="/anime/37987/"]::after { content: "8.94"; }
+/* Violet Evergarden: Kitto "Ai" wo Shiru Hi ga Kuru no Darou */ .list-table td.data.image > a[href^="/anime/37095/"]::after { content: "8.31"; }
+/* Vivy: Fluorite Eye's Song */ .list-table td.data.image > a[href^="/anime/46095/"]::after { content: "8.50"; }
+/* Watashi ga Motenai no wa Dou Kangaetemo Omaera ga Warui! */ .list-table td.data.image > a[href^="/anime/16742/"]::after { content: "7.01"; }
+/* Watashi ga Motete Dousunda */ .list-table td.data.image > a[href^="/anime/32899/"]::after { content: "7.04"; }
+/* Watashi, Nouryoku wa Heikinchi de tte Itta yo ne! */ .list-table td.data.image > a[href^="/anime/37393/"]::after { content: "6.82"; }
+/* White Album 2 */ .list-table td.data.image > a[href^="/anime/18245/"]::after { content: "7.66"; }
+/* Wonder Egg Priority */ .list-table td.data.image > a[href^="/anime/43299/"]::after { content: "7.86"; }
+/* World Trigger */ .list-table td.data.image > a[href^="/anime/24405/"]::after { content: "7.58"; }
+/* World Trigger 2nd Season */ .list-table td.data.image > a[href^="/anime/40907/"]::after { content: "8.09"; }
+/* Wotaku ni Koi wa Muzukashii */ .list-table td.data.image > a[href^="/anime/35968/"]::after { content: "7.95"; }
+/* Xian Wang de Richang Shenghuo */ .list-table td.data.image > a[href^="/anime/41094/"]::after { content: "7.29"; }
+/* xxxHOLiC */ .list-table td.data.image > a[href^="/anime/861/"]::after { content: "8.00"; }
+/* Yahari Ore no Seishun Love Comedy wa Machigatteiru. */ .list-table td.data.image > a[href^="/anime/14813/"]::after { content: "8.03"; }
+/* Yahari Ore no Seishun Love Comedy wa Machigatteiru. Kan */ .list-table td.data.image > a[href^="/anime/39547/"]::after { content: "8.40"; }
+/* Yahari Ore no Seishun Love Comedy wa Machigatteiru. Zoku */ .list-table td.data.image > a[href^="/anime/23847/"]::after { content: "8.24"; }
+/* Yakusoku no Neverland */ .list-table td.data.image > a[href^="/anime/37779/"]::after { content: "8.58"; }
+/* Yakusoku no Neverland 2nd Season */ .list-table td.data.image > a[href^="/anime/39617/"]::after { content: "5.45"; }
+/* Yesterday wo Utatte */ .list-table td.data.image > a[href^="/anime/39710/"]::after { content: "6.93"; }
+/* Yojouhan Shinwa Taikei */ .list-table td.data.image > a[href^="/anime/7785/"]::after { content: "8.59"; }
+/* Yosuga no Sora: In Solitude, Where We Are Least Alone. */ .list-table td.data.image > a[href^="/anime/8861/"]::after { content: "6.16"; }
+/* Youjo Senki */ .list-table td.data.image > a[href^="/anime/32615/"]::after { content: "7.98"; }
+/* Youjo Senki Movie */ .list-table td.data.image > a[href^="/anime/37055/"]::after { content: "8.25"; }
+/* Youkoso Jitsuryoku Shijou Shugi no Kyoushitsu e (TV) */ .list-table td.data.image > a[href^="/anime/35507/"]::after { content: "7.84"; }
+/* Yuri!!! on Ice */ .list-table td.data.image > a[href^="/anime/32995/"]::after { content: "7.91"; }
+/* Yuru Camp△ */ .list-table td.data.image > a[href^="/anime/34798/"]::after { content: "8.27"; }
+/* Yuru Camp△ Season 2 */ .list-table td.data.image > a[href^="/anime/38474/"]::after { content: "8.54"; }
+/* Yuukoku no Moriarty */ .list-table td.data.image > a[href^="/anime/40911/"]::after { content: "8.12"; }
+/* Yuukoku no Moriarty 2nd Season */ .list-table td.data.image > a[href^="/anime/43325/"]::after { content: "8.22"; }
+/* Zan Sayonara Zetsubou Sensei */ .list-table td.data.image > a[href^="/anime/6377/"]::after { content: "7.89"; }
+/* Zankyou no Terror */ .list-table td.data.image > a[href^="/anime/23283/"]::after { content: "8.11"; }
+/* Zetsuen no Tempest */ .list-table td.data.image > a[href^="/anime/14075/"]::after { content: "7.95"; }
+/* Zettai Karen Children: The Unlimited - Hyoubu Kyousuke */ .list-table td.data.image > a[href^="/anime/16005/"]::after { content: "7.50"; }
+/* Zoku Natsume Yuujinchou */ .list-table td.data.image > a[href^="/anime/5300/"]::after { content: "8.56"; }
+/* Zoku Owarimonogatari */ .list-table td.data.image > a[href^="/anime/36999/"]::after { content: "8.48"; }
+/* Zoku Sayonara Zetsubou Sensei */ .list-table td.data.image > a[href^="/anime/3228/"]::after { content: "7.91"; }
+/* Zombieland Saga */ .list-table td.data.image > a[href^="/anime/37976/"]::after { content: "7.52"; }
+/* Zombieland Saga: Revenge */ .list-table td.data.image > a[href^="/anime/40174/"]::after { content: "8.05"; }
+/* Crayon Shin-chan */ .list-table td.data.image > a[href^="/anime/966/"]::after { content: "7.72"; }
+/* Doraemon (1979) */ .list-table td.data.image > a[href^="/anime/2471/"]::after { content: "7.73"; }
+/* Jouran: The Princess of Snow and Blood */ .list-table td.data.image > a[href^="/anime/47250/"]::after { content: "6.09"; }
+/* Night Head 2041 */ .list-table td.data.image > a[href^="/anime/43767/"]::after { content: "6.63"; }
+/* Odd Taxi */ .list-table td.data.image > a[href^="/anime/46102/"]::after { content: "8.79"; }
+/* Sword Art Online Alternative: Gun Gale Online */ .list-table td.data.image > a[href^="/anime/36475/"]::after { content: "7.02"; }
+/* Ame wo Tsugeru Hyouryuu Danchi */ .list-table td.data.image > a[href^="/anime/49938/"]::after { content: "?"; }
+/* Arifureta Shokugyou de Sekai Saikyou 2nd Season */ .list-table td.data.image > a[href^="/anime/40507/"]::after { content: "?"; }
+/* Black Clover Movie */ .list-table td.data.image > a[href^="/anime/48585/"]::after { content: "?"; }
+/* Bleach: Sennen Kessen-hen */ .list-table td.data.image > a[href^="/anime/41467/"]::after { content: "?"; }
+/* Boku no Hero Academia 6th Season */ .list-table td.data.image > a[href^="/anime/49918/"]::after { content: "?"; }
+/* Boku no Hero Academia the Movie 3: World Heroes' Mission */ .list-table td.data.image > a[href^="/anime/44200/"]::after { content: "7.66"; }
+/* Chainsaw Man */ .list-table td.data.image > a[href^="/anime/44511/"]::after { content: "?"; }
+/* Date A Live IV */ .list-table td.data.image > a[href^="/anime/41461/"]::after { content: "?"; }
+/* Dr. Stone (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/48549/"]::after { content: "?"; }
+/* Dragon Ball Super: Super Hero */ .list-table td.data.image > a[href^="/anime/48903/"]::after { content: "?"; }
+/* Dungeon ni Deai wo Motomeru no wa Machigatteiru Darou ka IV */ .list-table td.data.image > a[href^="/anime/47164/"]::after { content: "?"; }
+/* Fairy Tail: 100 Years Quest */ .list-table td.data.image > a[href^="/anime/49785/"]::after { content: "?"; }
+/* Free! Movie 4: The Final Stroke */ .list-table td.data.image > a[href^="/anime/38400/"]::after { content: "7.09"; }
+/* Free! Movie 5: The Final Stroke */ .list-table td.data.image > a[href^="/anime/48830/"]::after { content: "?"; }
+/* Fumetsu no Anata e 2nd Season */ .list-table td.data.image > a[href^="/anime/49709/"]::after { content: "?"; }
+/* Genjitsu Shugi Yuusha no Oukoku Saikenki Part 2 */ .list-table td.data.image > a[href^="/anime/49930/"]::after { content: "?"; }
+/* Ginga Eiyuu Densetsu */ .list-table td.data.image > a[href^="/anime/820/"]::after { content: "9.05"; }
+/* Hataraku Maou-sama! 2nd Season */ .list-table td.data.image > a[href^="/anime/48413/"]::after { content: "?"; }
+/* Honzuki no Gekokujou: Shisho ni Naru Tame ni wa Shudan wo Erandeiraremasen 3rd Season */ .list-table td.data.image > a[href^="/anime/42429/"]::after { content: "?"; }
+/* IDOLiSH7 3rd Season Part 2 */ .list-table td.data.image > a[href^="/anime/46654/"]::after { content: "?"; }
+/* Itai no wa Iya nano de Bougyoryoku ni Kyokufuri Shitai to Omoimasu. II */ .list-table td.data.image > a[href^="/anime/41514/"]::after { content: "?"; }
+/* JoJo no Kimyou na Bouken Part 6: Stone Ocean */ .list-table td.data.image > a[href^="/anime/48661/"]::after { content: "?"; }
+/* Jujutsu Kaisen 0 Movie */ .list-table td.data.image > a[href^="/anime/48561/"]::after { content: "?"; }
+/* Kaguya-sama wa Kokurasetai: Tensai-tachi no Renai Zunousen 3rd Season */ .list-table td.data.image > a[href^="/anime/43608/"]::after { content: "?"; }
+/* Kanojo, Okarishimasu 2nd Season */ .list-table td.data.image > a[href^="/anime/42963/"]::after { content: "?"; }
+/* Kimetsu no Yaiba: Yuukaku-hen */ .list-table td.data.image > a[href^="/anime/47778/"]::after { content: "?"; }
+/* Kimi to Boku no Saigo no Senjou, Aruiwa Sekai ga Hajimaru Seisen (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/49981/"]::after { content: "?"; }
+/* Kono Subarashii Sekai ni Shukufuku wo! (Shinsaku Anime) */ .list-table td.data.image > a[href^="/anime/49458/"]::after { content: "?"; }
+/* Kyouko to Katsuya no Monogatari */ .list-table td.data.image > a[href^="/anime/49310/"]::after { content: "?"; }
+/* Made in Abyss: Retsujitsu no Ougonkyou */ .list-table td.data.image > a[href^="/anime/41084/"]::after { content: "?"; }
+/* Mahouka Koukou no Rettousei: Tsuioku-hen */ .list-table td.data.image > a[href^="/anime/48375/"]::after { content: "?"; }
+/* Maou Gakuin no Futekigousha: Shijou Saikyou no Maou no Shiso, Tensei shite Shison-tachi no Gakkou e Kayou 2nd Season */ .list-table td.data.image > a[href^="/anime/48417/"]::after { content: "?"; }
+/* Maou Gakuin no Futekigousha: Shijou Saikyou no Maou no Shiso, Tensei shite Shison-tachi no Gakkou e Kayou 2nd Season Part 2 */ .list-table td.data.image > a[href^="/anime/48418/"]::after { content: "?"; }
+/* Overlord IV */ .list-table td.data.image > a[href^="/anime/48895/"]::after { content: "?"; }
+/* Rikei ga Koi ni Ochita no de Shoumei shitemita. Heart */ .list-table td.data.image > a[href^="/anime/43470/"]::after { content: "?"; }
+/* Shiguang Dailiren 2nd Season */ .list-table td.data.image > a[href^="/anime/49413/"]::after { content: "?"; }
+/* Shingeki no Kyojin: The Final Season Part 2 */ .list-table td.data.image > a[href^="/anime/48583/"]::after { content: "?"; }
+/* Shinigami Bocchan to Kuro Maid (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/49858/"]::after { content: "?"; }
+/* Shuumatsu no Walküre */ .list-table td.data.image > a[href^="/anime/44942/"]::after { content: "6.62"; }
+/* Summer Ghost */ .list-table td.data.image > a[href^="/anime/48171/"]::after { content: "?"; }
+/* Sword Art Online: Progressive Movie - Hoshi Naki Yoru no Aria */ .list-table td.data.image > a[href^="/anime/42916/"]::after { content: "?"; }
+/* Tate no Yuusha no Nariagari Season 2 */ .list-table td.data.image > a[href^="/anime/40356/"]::after { content: "?"; }
+/* Tate no Yuusha no Nariagari Season 3 */ .list-table td.data.image > a[href^="/anime/40357/"]::after { content: "?"; }
+/* Tennis no Ouji-sama: Zenkoku Taikai-hen */ .list-table td.data.image > a[href^="/anime/995/"]::after { content: "7.92"; }
+/* Tensei shitara Slime Datta Ken Movie */ .list-table td.data.image > a[href^="/anime/49877/"]::after { content: "?"; }
+/* Tsuki ga Michibiku Isekai Douchuu 2nd Season */ .list-table td.data.image > a[href^="/anime/49889/"]::after { content: "?"; }
+/* Youjo Senki II */ .list-table td.data.image > a[href^="/anime/49233/"]::after { content: "?"; }
+/* Zombieland Saga Movie */ .list-table td.data.image > a[href^="/anime/50159/"]::after { content: "?"; }
