--- a/Manga-Score.css
+++ b/Manga-Score.css
@@ -43,14 +43,14 @@ MatchTemplate=/[TYPE]/[ID]/
 /* Arachnid */ .list-table td.data.image > a[href^="/manga/21111/"]::after { content: "7.06"; }
 /* Asa mo, Hiru mo, Yoru mo. */ .list-table td.data.image > a[href^="/manga/3685/"]::after { content: "6.87"; }
 /* Asagaya Geijutsu Koukou Eizou-ka e Youkoso */ .list-table td.data.image > a[href^="/manga/118000/"]::after { content: "7.10"; }
-/* Babel-shiki Kami Girl */ .list-table td.data.image > a[href^="/manga/105067/"]::after { content: "?"; }
+/* Babel-shiki Kami Girl */ .list-table td.data.image > a[href^="/manga/105067/"]::after { content: "N/A"; }
 /* Bastard */ .list-table td.data.image > a[href^="/manga/111213/"]::after { content: "8.58"; }
 /* Bitter Virgin */ .list-table td.data.image > a[href^="/manga/1162/"]::after { content: "7.80"; }
 /* Blame! */ .list-table td.data.image > a[href^="/manga/149/"]::after { content: "8.31"; }
 /* Bocchi na Bokura no Renai Jijou */ .list-table td.data.image > a[href^="/manga/72007/"]::after { content: "7.20"; }
 /* Can't See Can't Hear But Love */ .list-table td.data.image > a[href^="/manga/35171/"]::after { content: "8.25"; }
 /* Chainsaw Man */ .list-table td.data.image > a[href^="/manga/116778/"]::after { content: "8.70"; }
-/* Chihayafuru: Chuugakusei-hen */ .list-table td.data.image > a[href^="/manga/109886/"]::after { content: "?"; }
+/* Chihayafuru: Chuugakusei-hen */ .list-table td.data.image > a[href^="/manga/109886/"]::after { content: "N/A"; }
 /* Clockwork Planet */ .list-table td.data.image > a[href^="/manga/65155/"]::after { content: "7.40"; }
 /* Datte, Kimi ga Warau kara */ .list-table td.data.image > a[href^="/manga/35587/"]::after { content: "7.69"; }
 /* Death Note: Tokubetsu Yomikiri */ .list-table td.data.image > a[href^="/manga/123699/"]::after { content: "7.53"; }
@@ -72,7 +72,7 @@ MatchTemplate=/[TYPE]/[ID]/
 /* Hana-kun to Koisuru Watashi */ .list-table td.data.image > a[href^="/manga/26945/"]::after { content: "7.61"; }
 /* Hanshin */ .list-table td.data.image > a[href^="/manga/5943/"]::after { content: "7.31"; }
 /* Happy Sugar Life */ .list-table td.data.image > a[href^="/manga/92160/"]::after { content: "7.23"; }
-/* Haruka naru Asa */ .list-table td.data.image > a[href^="/manga/83761/"]::after { content: "?"; }
+/* Haruka naru Asa */ .list-table td.data.image > a[href^="/manga/83761/"]::after { content: "N/A"; }
 /* Hibi Chouchou */ .list-table td.data.image > a[href^="/manga/35719/"]::after { content: "7.58"; }
 /* Higurashi no Naku Koro ni Kai: Matsuribayashi-hen */ .list-table td.data.image > a[href^="/manga/9738/"]::after { content: "8.23"; }
 /* Higurashi no Naku Koro ni Kai: Meakashi-hen */ .list-table td.data.image > a[href^="/manga/1262/"]::after { content: "8.32"; }
@@ -130,7 +130,7 @@ MatchTemplate=/[TYPE]/[ID]/
 /* Murasakiiro no Qualia */ .list-table td.data.image > a[href^="/manga/51493/"]::after { content: "7.88"; }
 /* Necromance */ .list-table td.data.image > a[href^="/manga/121456/"]::after { content: "6.74"; }
 /* Negative Happy Chainsaw Edge */ .list-table td.data.image > a[href^="/manga/5674/"]::after { content: "6.98"; }
-/* Nidome no Natsu, Nidoto Aenai Kimi */ .list-table td.data.image > a[href^="/manga/84853/"]::after { content: "?"; }
+/* Nidome no Natsu, Nidoto Aenai Kimi */ .list-table td.data.image > a[href^="/manga/84853/"]::after { content: "N/A"; }
 /* No Game No Life: Practical War Game */ .list-table td.data.image > a[href^="/manga/103268/"]::after { content: "7.82"; }
 /* Now Playing */ .list-table td.data.image > a[href^="/manga/87845/"]::after { content: "7.16"; }
 /* Ohayou, Ibarahime */ .list-table td.data.image > a[href^="/manga/88639/"]::after { content: "8.55"; }
