--- a/Anime-Score.css
+++ b/Anime-Score.css
@@ -702,51 +702,51 @@ MatchTemplate=/[TYPE]/[ID]/
 /* Night Head 2041 */ .list-table td.data.image > a[href^="/anime/43767/"]::after { content: "6.63"; }
 /* Odd Taxi */ .list-table td.data.image > a[href^="/anime/46102/"]::after { content: "8.79"; }
 /* Sword Art Online Alternative: Gun Gale Online */ .list-table td.data.image > a[href^="/anime/36475/"]::after { content: "7.02"; }
-/* Ame wo Tsugeru Hyouryuu Danchi */ .list-table td.data.image > a[href^="/anime/49938/"]::after { content: "N/A"; }
-/* Arifureta Shokugyou de Sekai Saikyou 2nd Season */ .list-table td.data.image > a[href^="/anime/40507/"]::after { content: "N/A"; }
-/* Black Clover Movie */ .list-table td.data.image > a[href^="/anime/48585/"]::after { content: "N/A"; }
-/* Bleach: Sennen Kessen-hen */ .list-table td.data.image > a[href^="/anime/41467/"]::after { content: "N/A"; }
-/* Boku no Hero Academia 6th Season */ .list-table td.data.image > a[href^="/anime/49918/"]::after { content: "N/A"; }
+/* Ame wo Tsugeru Hyouryuu Danchi */ .list-table td.data.image > a[href^="/anime/49938/"]::after { content: "?"; }
+/* Arifureta Shokugyou de Sekai Saikyou 2nd Season */ .list-table td.data.image > a[href^="/anime/40507/"]::after { content: "?"; }
+/* Black Clover Movie */ .list-table td.data.image > a[href^="/anime/48585/"]::after { content: "?"; }
+/* Bleach: Sennen Kessen-hen */ .list-table td.data.image > a[href^="/anime/41467/"]::after { content: "?"; }
+/* Boku no Hero Academia 6th Season */ .list-table td.data.image > a[href^="/anime/49918/"]::after { content: "?"; }
 /* Boku no Hero Academia the Movie 3: World Heroes' Mission */ .list-table td.data.image > a[href^="/anime/44200/"]::after { content: "7.66"; }
-/* Chainsaw Man */ .list-table td.data.image > a[href^="/anime/44511/"]::after { content: "N/A"; }
-/* Date A Live IV */ .list-table td.data.image > a[href^="/anime/41461/"]::after { content: "N/A"; }
-/* Dr. Stone (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/48549/"]::after { content: "N/A"; }
-/* Dragon Ball Super: Super Hero */ .list-table td.data.image > a[href^="/anime/48903/"]::after { content: "N/A"; }
-/* Dungeon ni Deai wo Motomeru no wa Machigatteiru Darou ka IV */ .list-table td.data.image > a[href^="/anime/47164/"]::after { content: "N/A"; }
-/* Fairy Tail: 100 Years Quest */ .list-table td.data.image > a[href^="/anime/49785/"]::after { content: "N/A"; }
+/* Chainsaw Man */ .list-table td.data.image > a[href^="/anime/44511/"]::after { content: "?"; }
+/* Date A Live IV */ .list-table td.data.image > a[href^="/anime/41461/"]::after { content: "?"; }
+/* Dr. Stone (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/48549/"]::after { content: "?"; }
+/* Dragon Ball Super: Super Hero */ .list-table td.data.image > a[href^="/anime/48903/"]::after { content: "?"; }
+/* Dungeon ni Deai wo Motomeru no wa Machigatteiru Darou ka IV */ .list-table td.data.image > a[href^="/anime/47164/"]::after { content: "?"; }
+/* Fairy Tail: 100 Years Quest */ .list-table td.data.image > a[href^="/anime/49785/"]::after { content: "?"; }
 /* Free! Movie 4: The Final Stroke */ .list-table td.data.image > a[href^="/anime/38400/"]::after { content: "7.09"; }
-/* Free! Movie 5: The Final Stroke */ .list-table td.data.image > a[href^="/anime/48830/"]::after { content: "N/A"; }
-/* Fumetsu no Anata e 2nd Season */ .list-table td.data.image > a[href^="/anime/49709/"]::after { content: "N/A"; }
-/* Genjitsu Shugi Yuusha no Oukoku Saikenki Part 2 */ .list-table td.data.image > a[href^="/anime/49930/"]::after { content: "N/A"; }
+/* Free! Movie 5: The Final Stroke */ .list-table td.data.image > a[href^="/anime/48830/"]::after { content: "?"; }
+/* Fumetsu no Anata e 2nd Season */ .list-table td.data.image > a[href^="/anime/49709/"]::after { content: "?"; }
+/* Genjitsu Shugi Yuusha no Oukoku Saikenki Part 2 */ .list-table td.data.image > a[href^="/anime/49930/"]::after { content: "?"; }
 /* Ginga Eiyuu Densetsu */ .list-table td.data.image > a[href^="/anime/820/"]::after { content: "9.05"; }
-/* Hataraku Maou-sama! 2nd Season */ .list-table td.data.image > a[href^="/anime/48413/"]::after { content: "N/A"; }
-/* Honzuki no Gekokujou: Shisho ni Naru Tame ni wa Shudan wo Erandeiraremasen 3rd Season */ .list-table td.data.image > a[href^="/anime/42429/"]::after { content: "N/A"; }
-/* IDOLiSH7 3rd Season Part 2 */ .list-table td.data.image > a[href^="/anime/46654/"]::after { content: "N/A"; }
-/* Itai no wa Iya nano de Bougyoryoku ni Kyokufuri Shitai to Omoimasu. II */ .list-table td.data.image > a[href^="/anime/41514/"]::after { content: "N/A"; }
-/* JoJo no Kimyou na Bouken Part 6: Stone Ocean */ .list-table td.data.image > a[href^="/anime/48661/"]::after { content: "N/A"; }
-/* Jujutsu Kaisen 0 Movie */ .list-table td.data.image > a[href^="/anime/48561/"]::after { content: "N/A"; }
-/* Kaguya-sama wa Kokurasetai: Tensai-tachi no Renai Zunousen 3rd Season */ .list-table td.data.image > a[href^="/anime/43608/"]::after { content: "N/A"; }
-/* Kanojo, Okarishimasu 2nd Season */ .list-table td.data.image > a[href^="/anime/42963/"]::after { content: "N/A"; }
-/* Kimetsu no Yaiba: Yuukaku-hen */ .list-table td.data.image > a[href^="/anime/47778/"]::after { content: "N/A"; }
-/* Kimi to Boku no Saigo no Senjou, Aruiwa Sekai ga Hajimaru Seisen (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/49981/"]::after { content: "N/A"; }
-/* Kono Subarashii Sekai ni Shukufuku wo! (Shinsaku Anime) */ .list-table td.data.image > a[href^="/anime/49458/"]::after { content: "N/A"; }
-/* Kyouko to Katsuya no Monogatari */ .list-table td.data.image > a[href^="/anime/49310/"]::after { content: "N/A"; }
-/* Made in Abyss: Retsujitsu no Ougonkyou */ .list-table td.data.image > a[href^="/anime/41084/"]::after { content: "N/A"; }
-/* Mahouka Koukou no Rettousei: Tsuioku-hen */ .list-table td.data.image > a[href^="/anime/48375/"]::after { content: "N/A"; }
-/* Maou Gakuin no Futekigousha: Shijou Saikyou no Maou no Shiso, Tensei shite Shison-tachi no Gakkou e Kayou 2nd Season */ .list-table td.data.image > a[href^="/anime/48417/"]::after { content: "N/A"; }
-/* Maou Gakuin no Futekigousha: Shijou Saikyou no Maou no Shiso, Tensei shite Shison-tachi no Gakkou e Kayou 2nd Season Part 2 */ .list-table td.data.image > a[href^="/anime/48418/"]::after { content: "N/A"; }
-/* Overlord IV */ .list-table td.data.image > a[href^="/anime/48895/"]::after { content: "N/A"; }
-/* Rikei ga Koi ni Ochita no de Shoumei shitemita. Heart */ .list-table td.data.image > a[href^="/anime/43470/"]::after { content: "N/A"; }
-/* Shiguang Dailiren 2nd Season */ .list-table td.data.image > a[href^="/anime/49413/"]::after { content: "N/A"; }
-/* Shingeki no Kyojin: The Final Season Part 2 */ .list-table td.data.image > a[href^="/anime/48583/"]::after { content: "N/A"; }
-/* Shinigami Bocchan to Kuro Maid (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/49858/"]::after { content: "N/A"; }
+/* Hataraku Maou-sama! 2nd Season */ .list-table td.data.image > a[href^="/anime/48413/"]::after { content: "?"; }
+/* Honzuki no Gekokujou: Shisho ni Naru Tame ni wa Shudan wo Erandeiraremasen 3rd Season */ .list-table td.data.image > a[href^="/anime/42429/"]::after { content: "?"; }
+/* IDOLiSH7 3rd Season Part 2 */ .list-table td.data.image > a[href^="/anime/46654/"]::after { content: "?"; }
+/* Itai no wa Iya nano de Bougyoryoku ni Kyokufuri Shitai to Omoimasu. II */ .list-table td.data.image > a[href^="/anime/41514/"]::after { content: "?"; }
+/* JoJo no Kimyou na Bouken Part 6: Stone Ocean */ .list-table td.data.image > a[href^="/anime/48661/"]::after { content: "?"; }
+/* Jujutsu Kaisen 0 Movie */ .list-table td.data.image > a[href^="/anime/48561/"]::after { content: "?"; }
+/* Kaguya-sama wa Kokurasetai: Tensai-tachi no Renai Zunousen 3rd Season */ .list-table td.data.image > a[href^="/anime/43608/"]::after { content: "?"; }
+/* Kanojo, Okarishimasu 2nd Season */ .list-table td.data.image > a[href^="/anime/42963/"]::after { content: "?"; }
+/* Kimetsu no Yaiba: Yuukaku-hen */ .list-table td.data.image > a[href^="/anime/47778/"]::after { content: "?"; }
+/* Kimi to Boku no Saigo no Senjou, Aruiwa Sekai ga Hajimaru Seisen (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/49981/"]::after { content: "?"; }
+/* Kono Subarashii Sekai ni Shukufuku wo! (Shinsaku Anime) */ .list-table td.data.image > a[href^="/anime/49458/"]::after { content: "?"; }
+/* Kyouko to Katsuya no Monogatari */ .list-table td.data.image > a[href^="/anime/49310/"]::after { content: "?"; }
+/* Made in Abyss: Retsujitsu no Ougonkyou */ .list-table td.data.image > a[href^="/anime/41084/"]::after { content: "?"; }
+/* Mahouka Koukou no Rettousei: Tsuioku-hen */ .list-table td.data.image > a[href^="/anime/48375/"]::after { content: "?"; }
+/* Maou Gakuin no Futekigousha: Shijou Saikyou no Maou no Shiso, Tensei shite Shison-tachi no Gakkou e Kayou 2nd Season */ .list-table td.data.image > a[href^="/anime/48417/"]::after { content: "?"; }
+/* Maou Gakuin no Futekigousha: Shijou Saikyou no Maou no Shiso, Tensei shite Shison-tachi no Gakkou e Kayou 2nd Season Part 2 */ .list-table td.data.image > a[href^="/anime/48418/"]::after { content: "?"; }
+/* Overlord IV */ .list-table td.data.image > a[href^="/anime/48895/"]::after { content: "?"; }
+/* Rikei ga Koi ni Ochita no de Shoumei shitemita. Heart */ .list-table td.data.image > a[href^="/anime/43470/"]::after { content: "?"; }
+/* Shiguang Dailiren 2nd Season */ .list-table td.data.image > a[href^="/anime/49413/"]::after { content: "?"; }
+/* Shingeki no Kyojin: The Final Season Part 2 */ .list-table td.data.image > a[href^="/anime/48583/"]::after { content: "?"; }
+/* Shinigami Bocchan to Kuro Maid (Zoku-hen) */ .list-table td.data.image > a[href^="/anime/49858/"]::after { content: "?"; }
 /* Shuumatsu no Walküre */ .list-table td.data.image > a[href^="/anime/44942/"]::after { content: "6.62"; }
-/* Summer Ghost */ .list-table td.data.image > a[href^="/anime/48171/"]::after { content: "N/A"; }
-/* Sword Art Online: Progressive Movie - Hoshi Naki Yoru no Aria */ .list-table td.data.image > a[href^="/anime/42916/"]::after { content: "N/A"; }
-/* Tate no Yuusha no Nariagari Season 2 */ .list-table td.data.image > a[href^="/anime/40356/"]::after { content: "N/A"; }
-/* Tate no Yuusha no Nariagari Season 3 */ .list-table td.data.image > a[href^="/anime/40357/"]::after { content: "N/A"; }
+/* Summer Ghost */ .list-table td.data.image > a[href^="/anime/48171/"]::after { content: "?"; }
+/* Sword Art Online: Progressive Movie - Hoshi Naki Yoru no Aria */ .list-table td.data.image > a[href^="/anime/42916/"]::after { content: "?"; }
+/* Tate no Yuusha no Nariagari Season 2 */ .list-table td.data.image > a[href^="/anime/40356/"]::after { content: "?"; }
+/* Tate no Yuusha no Nariagari Season 3 */ .list-table td.data.image > a[href^="/anime/40357/"]::after { content: "?"; }
 /* Tennis no Ouji-sama: Zenkoku Taikai-hen */ .list-table td.data.image > a[href^="/anime/995/"]::after { content: "7.92"; }
-/* Tensei shitara Slime Datta Ken Movie */ .list-table td.data.image > a[href^="/anime/49877/"]::after { content: "N/A"; }
-/* Tsuki ga Michibiku Isekai Douchuu 2nd Season */ .list-table td.data.image > a[href^="/anime/49889/"]::after { content: "N/A"; }
-/* Youjo Senki II */ .list-table td.data.image > a[href^="/anime/49233/"]::after { content: "N/A"; }
-/* Zombieland Saga Movie */ .list-table td.data.image > a[href^="/anime/50159/"]::after { content: "N/A"; }
+/* Tensei shitara Slime Datta Ken Movie */ .list-table td.data.image > a[href^="/anime/49877/"]::after { content: "?"; }
+/* Tsuki ga Michibiku Isekai Douchuu 2nd Season */ .list-table td.data.image > a[href^="/anime/49889/"]::after { content: "?"; }
+/* Youjo Senki II */ .list-table td.data.image > a[href^="/anime/49233/"]::after { content: "?"; }
+/* Zombieland Saga Movie */ .list-table td.data.image > a[href^="/anime/50159/"]::after { content: "?"; }
